improve readability and fix special chars in the description

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -86,6 +86,7 @@
         grid-template-rows: auto auto;
         gap: 5px;
         font-size: 0.9em;
+        line-height: 1.4;
         h4 {
           font-weight: bold;
         }
